...
                    
                    switch type {
                    case "Sleep":
                        Text("Sleep")
                        
                    case "Feed":
                        Text("Bottle Type")
                        TextField("Bottle Type", text: $bottleType)
                        
                        Text("Amount")
                        TextField("Amount", value: $amount, format: .number)
                        
                    case "Diaper":
...
